force-app/main/default/objects/reddit_items__c/reddit_items__c.object-meta.xml
<CustomObject>
    <label>reddit_item</label>
    <nameField>
        <label>reddit_item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>reddit_items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>