force-app/main/default/objects/reddit_items__c/fields/all_awardings__c.field-meta.xml
<CustomField>
    <fullName>all_awardings__c</fullName>
    <label>all_awardings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>