force-app/main/default/objects/reddit_items__c/fields/allow_live_comments__c.field-meta.xml
<CustomField>
    <fullName>allow_live_comments__c</fullName>
    <label>allow_live_comments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>