force-app/main/default/objects/reddit_items__c/fields/approved_by__c.field-meta.xml
<CustomField>
    <fullName>approved_by__c</fullName>
    <label>approved_by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>