force-app/main/default/objects/reddit_items__c/fields/archived__c.field-meta.xml
<CustomField>
    <fullName>archived__c</fullName>
    <label>archived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>