force-app/main/default/objects/reddit_items__c/fields/author__c.field-meta.xml
<CustomField>
    <fullName>author__c</fullName>
    <label>author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>