force-app/main/default/objects/reddit_items__c/fields/author_flair_css_class__c.field-meta.xml
<CustomField>
    <fullName>author_flair_css_class__c</fullName>
    <label>author_flair_css_class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>