force-app/main/default/objects/reddit_items__c/fields/author_fullname__c.field-meta.xml
<CustomField>
    <fullName>author_fullname__c</fullName>
    <label>author_fullname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>