force-app/main/default/objects/reddit_items__c/fields/author_is_blocked__c.field-meta.xml
<CustomField>
    <fullName>author_is_blocked__c</fullName>
    <label>author_is_blocked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>