force-app/main/default/objects/reddit_items__c/fields/author_patreon_flair__c.field-meta.xml
<CustomField>
    <fullName>author_patreon_flair__c</fullName>
    <label>author_patreon_flair</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>