force-app/main/default/objects/reddit_items__c/fields/author_premium__c.field-meta.xml
<CustomField>
    <fullName>author_premium__c</fullName>
    <label>author_premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>