force-app/main/default/objects/reddit_items__c/fields/awarders__c.field-meta.xml
<CustomField>
    <fullName>awarders__c</fullName>
    <label>awarders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>