force-app/main/default/objects/reddit_items__c/fields/banned_at_utc__c.field-meta.xml
<CustomField>
    <fullName>banned_at_utc__c</fullName>
    <label>banned_at_utc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>