force-app/main/default/objects/reddit_items__c/fields/banned_by__c.field-meta.xml
<CustomField>
    <fullName>banned_by__c</fullName>
    <label>banned_by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>