force-app/main/default/objects/reddit_items__c/fields/can_gild__c.field-meta.xml
<CustomField>
    <fullName>can_gild__c</fullName>
    <label>can_gild</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>