force-app/main/default/objects/reddit_items__c/fields/can_mod_post__c.field-meta.xml
<CustomField>
    <fullName>can_mod_post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>can_mod_post</label>
    <type>Checkbox</type>
</CustomField>