force-app/main/default/objects/reddit_items__c/fields/clicked__c.field-meta.xml
<CustomField>
    <fullName>clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>clicked</label>
    <type>Checkbox</type>
</CustomField>