force-app/main/default/objects/reddit_items__c/fields/content_categories__c.field-meta.xml
<CustomField>
    <fullName>content_categories__c</fullName>
    <label>content_categories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>