force-app/main/default/objects/reddit_items__c/fields/contest_mode__c.field-meta.xml
<CustomField>
    <fullName>contest_mode__c</fullName>
    <label>contest_mode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>