force-app/main/default/objects/reddit_items__c/fields/created__c.field-meta.xml
<CustomField>
    <fullName>created__c</fullName>
    <label>created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>