force-app/main/default/objects/reddit_items__c/fields/created_utc__c.field-meta.xml
<CustomField>
    <fullName>created_utc__c</fullName>
    <label>created_utc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>