force-app/main/default/objects/reddit_items__c/fields/discussion_type__c.field-meta.xml
<CustomField>
    <fullName>discussion_type__c</fullName>
    <label>discussion_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>