force-app/main/default/objects/reddit_items__c/fields/distinguished__c.field-meta.xml
<CustomField>
    <fullName>distinguished__c</fullName>
    <label>distinguished</label>
    <length>255</length>
    <type>Text</type>
</CustomField>