force-app/main/default/objects/reddit_items__c/fields/domain__c.field-meta.xml
<CustomField>
    <fullName>domain__c</fullName>
    <label>domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>