force-app/main/default/objects/reddit_items__c/fields/downs__c.field-meta.xml
<CustomField>
    <fullName>downs__c</fullName>
    <label>downs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>