force-app/main/default/objects/reddit_items__c/fields/edited__c.field-meta.xml
<CustomField>
    <fullName>edited__c</fullName>
    <label>edited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>