force-app/main/default/objects/reddit_items__c/fields/gilded__c.field-meta.xml
<CustomField>
    <fullName>gilded__c</fullName>
    <label>gilded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>