force-app/main/default/objects/reddit_items__c/fields/gildings__c.field-meta.xml
<CustomField>
    <fullName>gildings__c</fullName>
    <label>gildings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>