force-app/main/default/objects/reddit_items__c/fields/hidden__c.field-meta.xml
<CustomField>
    <fullName>hidden__c</fullName>
    <label>hidden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>