force-app/main/default/objects/reddit_items__c/fields/hide_score__c.field-meta.xml
<CustomField>
    <fullName>hide_score__c</fullName>
    <label>hide_score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>