force-app/main/default/objects/reddit_items__c/fields/is_created_from_ads_ui__c.field-meta.xml
<CustomField>
    <fullName>is_created_from_ads_ui__c</fullName>
    <label>is_created_from_ads_ui</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>