force-app/main/default/objects/reddit_items__c/fields/is_crosspostable__c.field-meta.xml
<CustomField>
    <fullName>is_crosspostable__c</fullName>
    <label>is_crosspostable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>