force-app/main/default/objects/reddit_items__c/fields/is_meta__c.field-meta.xml
<CustomField>
    <fullName>is_meta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_meta</label>
    <type>Checkbox</type>
</CustomField>