force-app/main/default/objects/reddit_items__c/fields/is_original_content__c.field-meta.xml
<CustomField>
    <fullName>is_original_content__c</fullName>
    <label>is_original_content</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>