force-app/main/default/objects/reddit_items__c/fields/is_reddit_media_domain__c.field-meta.xml
<CustomField>
    <fullName>is_reddit_media_domain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_reddit_media_domain</label>
    <type>Checkbox</type>
</CustomField>