force-app/main/default/objects/reddit_items__c/fields/is_robot_indexable__c.field-meta.xml
<CustomField>
    <fullName>is_robot_indexable__c</fullName>
    <label>is_robot_indexable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>