force-app/main/default/objects/reddit_items__c/fields/is_self__c.field-meta.xml
<CustomField>
    <fullName>is_self__c</fullName>
    <label>is_self</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>