force-app/main/default/objects/reddit_items__c/fields/kind__c.field-meta.xml
<CustomField>
    <fullName>kind__c</fullName>
    <label>kind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>