force-app/main/default/objects/reddit_items__c/fields/likes__c.field-meta.xml
<CustomField>
    <fullName>likes__c</fullName>
    <label>likes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>