force-app/main/default/objects/reddit_items__c/fields/link_flair_template_id__c.field-meta.xml
<CustomField>
    <fullName>link_flair_template_id__c</fullName>
    <label>link_flair_template_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>