force-app/main/default/objects/reddit_items__c/fields/locked__c.field-meta.xml
<CustomField>
    <fullName>locked__c</fullName>
    <label>locked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>