force-app/main/default/objects/reddit_items__c/fields/media__c.field-meta.xml
<CustomField>
    <fullName>media__c</fullName>
    <label>media</label>
    <length>255</length>
    <type>Text</type>
</CustomField>