force-app/main/default/objects/reddit_items__c/fields/media_only__c.field-meta.xml
<CustomField>
    <fullName>media_only__c</fullName>
    <label>media_only</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>