force-app/main/default/objects/reddit_items__c/fields/mod_note__c.field-meta.xml
<CustomField>
    <fullName>mod_note__c</fullName>
    <label>mod_note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>