force-app/main/default/objects/reddit_items__c/fields/mod_reason_by__c.field-meta.xml
<CustomField>
    <fullName>mod_reason_by__c</fullName>
    <label>mod_reason_by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>