force-app/main/default/objects/reddit_items__c/fields/mod_reason_title__c.field-meta.xml
<CustomField>
    <fullName>mod_reason_title__c</fullName>
    <label>mod_reason_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>