force-app/main/default/objects/reddit_items__c/fields/mod_reports__c.field-meta.xml
<CustomField>
    <fullName>mod_reports__c</fullName>
    <label>mod_reports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>