force-app/main/default/objects/reddit_items__c/fields/no_follow__c.field-meta.xml
<CustomField>
    <fullName>no_follow__c</fullName>
    <label>no_follow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>