force-app/main/default/objects/reddit_items__c/fields/num_crossposts__c.field-meta.xml
<CustomField>
    <fullName>num_crossposts__c</fullName>
    <label>num_crossposts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>