force-app/main/default/objects/reddit_items__c/fields/num_reports__c.field-meta.xml
<CustomField>
    <fullName>num_reports__c</fullName>
    <label>num_reports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>