force-app/main/default/objects/reddit_items__c/fields/over_18__c.field-meta.xml
<CustomField>
    <fullName>over_18__c</fullName>
    <label>over_18</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>