force-app/main/default/objects/reddit_items__c/fields/parent_whitelist_status__c.field-meta.xml
<CustomField>
    <fullName>parent_whitelist_status__c</fullName>
    <label>parent_whitelist_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>