force-app/main/default/objects/reddit_items__c/fields/permalink__c.field-meta.xml
<CustomField>
    <fullName>permalink__c</fullName>
    <label>permalink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>