force-app/main/default/objects/reddit_items__c/fields/pinned__c.field-meta.xml
<CustomField>
    <fullName>pinned__c</fullName>
    <label>pinned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>