force-app/main/default/objects/reddit_items__c/fields/pwls__c.field-meta.xml
<CustomField>
    <fullName>pwls__c</fullName>
    <label>pwls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>