force-app/main/default/objects/reddit_items__c/fields/quarantine__c.field-meta.xml
<CustomField>
    <fullName>quarantine__c</fullName>
    <label>quarantine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>