force-app/main/default/objects/reddit_items__c/fields/removal_reason__c.field-meta.xml
<CustomField>
    <fullName>removal_reason__c</fullName>
    <label>removal_reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>