force-app/main/default/objects/reddit_items__c/fields/removed_by__c.field-meta.xml
<CustomField>
    <fullName>removed_by__c</fullName>
    <label>removed_by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>