force-app/main/default/objects/reddit_items__c/fields/removed_by_category__c.field-meta.xml
<CustomField>
    <fullName>removed_by_category__c</fullName>
    <label>removed_by_category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>