force-app/main/default/objects/reddit_items__c/fields/report_reasons__c.field-meta.xml
<CustomField>
    <fullName>report_reasons__c</fullName>
    <label>report_reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>