force-app/main/default/objects/reddit_items__c/fields/saved__c.field-meta.xml
<CustomField>
    <fullName>saved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>saved</label>
    <type>Checkbox</type>
</CustomField>