force-app/main/default/objects/reddit_items__c/fields/score__c.field-meta.xml
<CustomField>
    <fullName>score__c</fullName>
    <label>score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>