force-app/main/default/objects/reddit_items__c/fields/secure_media__c.field-meta.xml
<CustomField>
    <fullName>secure_media__c</fullName>
    <label>secure_media</label>
    <length>255</length>
    <type>Text</type>
</CustomField>