force-app/main/default/objects/reddit_items__c/fields/secure_media_embed__c.field-meta.xml
<CustomField>
    <fullName>secure_media_embed__c</fullName>
    <label>secure_media_embed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>