force-app/main/default/objects/reddit_items__c/fields/selftext__c.field-meta.xml
<CustomField>
    <fullName>selftext__c</fullName>
    <label>selftext</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>