force-app/main/default/objects/reddit_items__c/fields/selftext_html__c.field-meta.xml
<CustomField>
    <fullName>selftext_html__c</fullName>
    <label>selftext_html</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>