force-app/main/default/objects/reddit_items__c/fields/send_replies__c.field-meta.xml
<CustomField>
    <fullName>send_replies__c</fullName>
    <label>send_replies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>