force-app/main/default/objects/reddit_items__c/fields/spoiler__c.field-meta.xml
<CustomField>
    <fullName>spoiler__c</fullName>
    <label>spoiler</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>