force-app/main/default/objects/reddit_items__c/fields/stickied__c.field-meta.xml
<CustomField>
    <fullName>stickied__c</fullName>
    <label>stickied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>