force-app/main/default/objects/reddit_items__c/fields/subreddit__c.field-meta.xml
<CustomField>
    <fullName>subreddit__c</fullName>
    <label>subreddit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>