force-app/main/default/objects/reddit_items__c/fields/subreddit_id__c.field-meta.xml
<CustomField>
    <fullName>subreddit_id__c</fullName>
    <label>subreddit_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>