force-app/main/default/objects/reddit_items__c/fields/subreddit_name_prefixed__c.field-meta.xml
<CustomField>
    <fullName>subreddit_name_prefixed__c</fullName>
    <label>subreddit_name_prefixed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>