force-app/main/default/objects/reddit_items__c/fields/subreddit_subscribers__c.field-meta.xml
<CustomField>
    <fullName>subreddit_subscribers__c</fullName>
    <label>subreddit_subscribers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>