force-app/main/default/objects/reddit_items__c/fields/subreddit_type__c.field-meta.xml
<CustomField>
    <fullName>subreddit_type__c</fullName>
    <label>subreddit_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>