force-app/main/default/objects/reddit_items__c/fields/suggested_sort__c.field-meta.xml
<CustomField>
    <fullName>suggested_sort__c</fullName>
    <label>suggested_sort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>