force-app/main/default/objects/reddit_items__c/fields/thumbnail__c.field-meta.xml
<CustomField>
    <fullName>thumbnail__c</fullName>
    <label>thumbnail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>