force-app/main/default/objects/reddit_items__c/fields/thumbnail_height__c.field-meta.xml
<CustomField>
    <fullName>thumbnail_height__c</fullName>
    <label>thumbnail_height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>