force-app/main/default/objects/reddit_items__c/fields/thumbnail_width__c.field-meta.xml
<CustomField>
    <fullName>thumbnail_width__c</fullName>
    <label>thumbnail_width</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>