force-app/main/default/objects/reddit_items__c/fields/top_awarded_type__c.field-meta.xml
<CustomField>
    <fullName>top_awarded_type__c</fullName>
    <label>top_awarded_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>