force-app/main/default/objects/reddit_items__c/fields/total_awards_received__c.field-meta.xml
<CustomField>
    <fullName>total_awards_received__c</fullName>
    <label>total_awards_received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>