force-app/main/default/objects/reddit_items__c/fields/treatment_tags__c.field-meta.xml
<CustomField>
    <fullName>treatment_tags__c</fullName>
    <label>treatment_tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>