force-app/main/default/objects/reddit_items__c/fields/ups__c.field-meta.xml
<CustomField>
    <fullName>ups__c</fullName>
    <label>ups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>