force-app/main/default/objects/reddit_items__c/fields/upvote_ratio__c.field-meta.xml
<CustomField>
    <fullName>upvote_ratio__c</fullName>
    <label>upvote_ratio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>