force-app/main/default/objects/reddit_items__c/fields/url_overridden_by_dest__c.field-meta.xml
<CustomField>
    <fullName>url_overridden_by_dest__c</fullName>
    <label>url_overridden_by_dest</label>
    <type>Url</type>
</CustomField>