force-app/main/default/objects/reddit_items__c/fields/user_reports__c.field-meta.xml
<CustomField>
    <fullName>user_reports__c</fullName>
    <label>user_reports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>