force-app/main/default/objects/reddit_items__c/fields/view_count__c.field-meta.xml
<CustomField>
    <fullName>view_count__c</fullName>
    <label>view_count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>