force-app/main/default/objects/reddit_items__c/fields/visited__c.field-meta.xml
<CustomField>
    <fullName>visited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>visited</label>
    <type>Checkbox</type>
</CustomField>