force-app/main/default/objects/reddit_items__c/fields/whitelist_status__c.field-meta.xml
<CustomField>
    <fullName>whitelist_status__c</fullName>
    <label>whitelist_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>