force-app/main/default/objects/reddit_items__c/fields/wls__c.field-meta.xml
<CustomField>
    <fullName>wls__c</fullName>
    <label>wls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>