force-app/main/default/objects/reddit_items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>kind__c</columns>
    <columns>approved_at_utc__c</columns>
    <columns>subreddit__c</columns>
    <columns>selftext__c</columns>
    <columns>author_fullname__c</columns>
    <columns>saved__c</columns>
    <columns>mod_reason_title__c</columns>
    <columns>gilded__c</columns>
    <columns>clicked__c</columns>
    <columns>title__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los registros</label>
</ListView>